--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,4 +1,7 @@
+/* components/Footer/Footer.css */
+
 ._Footer {
+	position: relative;
   height: 48px;
   padding-top: 0 !important;
 	padding: 0 20px 0 20px;
